# fancy

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  init_config.sh  requirements.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
basic_model/notebooks/: 2d_gaussian_sim.ipynb  mixture_model.ipynb  review_soiaporn.ipynb  simplified_model.ipynb  simulation_in_stan.ipynb  soiaporn_model.ipynb
basic_model/stan/: experimental_model.stan  gen_simplified_model.stan  scrapbook.stan  soiaporn_model.stan
demo/: fancy_demo.ipynb  sampling_from_vMF.ipynb  sim_data.data.R  test.data.R  test_sim.data.R  testing.ipynb
fancy/: __init__.py  _version.py
fancy/allskymap/: .#allskymap.py  allskymap.py
fancy/analysis/: .#analysis.py  .#model.py  __init__.py  analysis.py  results.py
fancy/data/: data.py
fancy/detector/: TA2015.py  auger.py  auger2010.py  auger2014.py  auger2022.py  detector.py  exposure.py
fancy/interfaces/: .#samples.py  __init__.py  data.py  integration.py  make_nuclear_table.py  samples.py  source.py  stan.py  stan_utility.py  uhecr.py  utils.py
fancy/plotting/: HPD_regions.py  __init__.py  allskymap.py  allskymap_cartopy.py  colours.py  config_mplstyles.py  corner.py  mpl_style.py
fancy/propagation/: __init__.py  cosmology.py  crpropa_energy_loss.py  energy_loss.py  gmf.py  proton_energy_loss.py
fancy/source/: source.py
fancy/uhecr/: __init__.py  (+1 more)
soiaporn_model/: 2d_gaussian_sim.ipynb  allskymap.py  gen_simplified_model.stan  simplified_model.ipynb  simplified_model.stan  simplified_model_nobg.stan  soiaporn_model.ipynb
test/: test_fancy.ipynb
tests/: test_allskymap.py
(+18 files in other folders)
