[metadata]
name = fancy
description = UHECR modelling and fitting tools
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/cescalara/fancy
author_email = capel.francesca@gmail.com
author = Francesca Capel
requires_python = >=3.0

project_urls =
    Bug Tracker = https://github.com/cescalara/fancy/issues
    Source Code = https://github.com/cescalara/fancy

[options]
packages = find:
install_requires =
    numpy
    scipy
    matplotlib
    astropy
    tqdm
    h5py
    pyproj
    ligo.skymap
    pandas
    cmdstanpy