[metadata]
name = fancy
description = UHECR modelling and fitting tools
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/cescalara/fancy
author_email = capel.francesca@gmail.com
author = Francesca Capel
requires_python = >=3.0

project_urls =
    Bug Tracker = https://github.com/cescalara/fancy/issues
    Source Code = https://github.com/cescalara/fancy

[options]
packages = find:
install_requires =
    numpy
    scipy
    matplotlib
    astropy
    tqdm
    h5py
    pyproj
    pandas
    cmdstanpy
    seaborn
    versioneer
    requests

tests_require =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    config-mplstyle = fancy.plotting:config_mplstyle
    install-gmflens = fancy.propagation:install_gmflens

[versioneer]
VCS=git
style=pep440
versionfile_source=fancy/_version.py
versionfile_build=fancy/_version.py
tag_prefix=v
parentdir_prefix=fancy-